--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
@@ -29,8 +29,8 @@
             <img src="{{ url_for('static', filename='logo-sekolah.png') }}" class = "img">
           </div>
             <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan NIP" name="nip">
-              <label for="floatingInput">NIP</label>
+              <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan Username" name="username">
+              <label for="floatingInput">Username</label>
             </div>
             <div class="form-floating">
               <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
