--- a/Sistem Keuangan Daarul Jannah - Access Ver/static/tabel.css
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/static/tabel.css
@@ -39,12 +39,25 @@ a:hover{
 
 .box-menu{
         border: none;
-        background-color: #056A31 !important;
+        background-color: 056A31 !important;
         color: white;
         padding: 18px 18px;
         font-size: 16px;
         cursor: pointer;
 
+}
+.user-box{
+    /* user-box */
+
+    position: flex;
+    width: 213px;
+    height: 75px;
+    left: 1323px;
+    top: 0px;
+
+    /* Fill color2 */
+
+    background: #07361B;
 }
 
 .nama{
@@ -138,7 +151,7 @@ a:hover{
     top: 32px;
 
     background: url(.png);
-    border-radius: 15px !important;
+    border-radius: 20px;
     padding-top: 20px;
     padding-left: 20px; 
     float: left;
@@ -172,6 +185,10 @@ a:hover{
     border-radius: 15px;
     float: left;
 
+}
+
+.table{
+    border: 0px !important;
 }
 
 .tabel-histori{
@@ -223,10 +240,38 @@ a:hover{
     width: 100%;
 }
 
-.scrollable {
+.scrollable1 {
     display: block;
     height: 680px;
     overflow-y: scroll;
+    padding-left: 0px !important;
+}
+
+.scrollable2{
+    display: block;
+    width: auto;
+    height: 300px;
+    overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+::-webkit-scrollbar-track {
+    background-color: darkgrey;
+}
+   
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+  
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 th{
@@ -236,4 +281,8 @@ th{
     border-top-left-radius: 15px !important;
     border-top-right-radius: 15px !important;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+}
+
+.wm1{
+    color:white;
 }
