--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/tabel-pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/tabel-pembayaran.html
@@ -64,7 +64,7 @@
                     <div class="detail-tagihan">
                         <ul>
                             {% for tagihan_siswa in tagihan %}
-                            <li><b>SPP {{tagihan_siswa.Tagihan_bulan}}/2021 : </b> Rp.{{tagihan_siswa.Jumlah_tagihan}},-</li>
+                            <li><b>{{ tagihan_siswa.Jenis_tagihan }} {{tagihan_siswa.Tagihan_bulan}}/{{ tagihan_siswa.Tagihan_tahun }} : </b> Rp.{{tagihan_siswa.Jumlah_tagihan}},-</li>
                             {% endfor %}
                         </ul>
                     </div>
@@ -84,11 +84,41 @@
                             <th>Jemputan</th>
                             <th>Ekskul</th>
                             <th>Majelis Sekolah</th>
-                            {% for data_pembayaran_spp in spp%}
+                            {% for data_pembayaran in spp%}
                             <tr>
-                                <td>{{data_pembayaran_spp.Waktu_pembayaran}}</td>
-                                <td>Rp.{{data_pembayaran_spp.Pembayaran}},-</td>
-                                <td>-</td>
+                                <td> 
+                                    {%if not data_pembayaran.Waktu_pembayaran == None%} 
+                                    {{ data_pembayaran.Waktu_pembayaran }}
+                                    {% else %}
+                                    N/A
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {%if data_pembayaran.Jenis_Pembayaran == "SPP" and data_pembayaran.Status == "Lunas"%} 
+                                    Rp.{{ data_pembayaran.Pembayaran }},-
+                                    {%elif data_pembayaran.Jenis_Pembayaran == "SPP" and data_pembayaran.Status == "Overpaid"%} 
+                                    {% if not data_pembayaran.Pembayaran == None%}
+                                    Rp.{{data_pembayaran.Pembayaran}},-
+                                    {%else%}
+                                    Overpayment 
+                                    {% endif %}
+                                    {% else %}
+                                    -
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {%if data_pembayaran.Jenis_Pembayaran == "Tabungan Wajib" and data_pembayaran.Status == "Lunas"%} 
+                                    Rp.{{ data_pembayaran.Pembayaran }},-
+                                    {%elif data_pembayaran.Jenis_Pembayaran == "Tabungan Wajib" and data_pembayaran.Status == "Overpaid"%} 
+                                    {% if not data_pembayaran.Pembayaran == None%}
+                                    Rp.{{data_pembayaran.Pembayaran}},-
+                                    {%else%}
+                                    Overpayment 
+                                    {% endif %}
+                                    {% else %}
+                                    -
+                                    {% endif %}
+                                </td>
                                 <td>-</td>
                                 <td>-</td>
                                 <td>-</td>
