--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
@@ -7,6 +7,7 @@
   document.getElementById('judul').innerHTML = "Cek Pembayaran";
 </script>
 
+
 <!--Font-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,17 +37,26 @@
     <span class="input-group-addon card shadow">
         <img src="{{ url_for('static', filename='eva_search-fill.png') }}">
     </span>
-    <input type="text" class="form-control searchbar" placeholder="Ketik NIS atau Nama Siswa" aria-label="nis-siswa" aria-describedby="basic-addon2" name="nis">
-    <div class="input-group-append">
-      <button class="btn btn-success shadow" type="submit">Cari</button>
-    </div>
+    <!-- {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <input type="text" class="form-control searchbar" placeholder="NIS tidak ditemukan!" aria-label="nis-siswa" aria-describedby="basic-addon2" name="nis">
+        <div class="input-group-append">
+          <button class="btn btn-success shadow" type="submit">Cari</button>
+        </div>
+      {% else %} -->
+        <input type="text" class="form-control searchbar" placeholder="Ketik NIS atau Nama Siswa" aria-label="nis-siswa" aria-describedby="basic-addon2" name="nis">
+        <div class="input-group-append">
+          <button class="btn btn-success shadow" type="submit">Cari</button>
+        </div>
+      <!-- {% endif %}
+    {% endwith %} -->
   </div>
 </form>
 
 <!-- Footer -->
 <footer class="bg-light text-center text-lg-start footer">
   <div class="text-left p-3">
-    Copyright © 2021 Sekolah Daarul Jannah
+    Copyright © 2021 Sekolah Daarul Jannah - 212201020
   </div>
 </footer>
 {% endblock %}
