--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
@@ -56,7 +56,7 @@
 <!-- Footer -->
 <footer class="bg-light text-center text-lg-start footer">
   <div class="text-left p-3">
-    Copyright © 2021 Sekolah Daarul Jannah - 212201020
+    Copyright © 2021 Sekolah Daarul Jannah
   </div>
 </footer>
 {% endblock %}
