--- a/Sistem Keuangan Daarul Jannah/templates/Old Template/ubahdata.html
+++ b/Sistem Keuangan Daarul Jannah/templates/Old Template/ubahdata.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Dashboard - Sistem Pembayaran DJ</title>
@@ -14,7 +15,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <!-- CSS Custom -->
-        <link rel="stylesheet" href="CSS/ubahdata.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='ubahdata.css') }}">
 
         <link rel="icon" type="image/png" href="Image/Icon1.png">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
