--- a/Sistem Keuangan Daarul Jannah/templates/Project New/dashboard.html
+++ b/Sistem Keuangan Daarul Jannah/templates/Project New/dashboard.html
@@ -14,34 +14,36 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <!-- CSS Custom -->
-        <link rel="stylesheet" href="CSS/ubahdata.css">
+        <link rel="stylesheet" href="CSS/dashboard.css">
 
         <link rel="icon" type="image/png" href="Image/Icon1.png">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
+        
     </head>
 
     <body>
-        <!-- Header -->
-        <nav class="navbar navbar-light header">
-            <a>
-            <button class ="box-menu"><i class="fas fa-bars"></i></button>
-            <img src="Image/logo-sekolah.png" width="40" height="40" class="d-inline-block" alt="">
-            </a>
-            <div class="user-box">
-                <i class="fas fa-user-circle id"></i>
-                <div class="id">
-                    <p class = "nama">Andy Rusman<br>018273282</p>
-                </div>
-            </div>
-        </nav>
+        <!-- Sidebar -->
+      <nav>
+        <ul>
+            <li class="logo"><img src="Image/logo-sekolah.png" class="schlogo"></li>
+            <li class="tag-logo">Sistem Pembayaran Sekolah Islam Plus Daarul Jannah</li>
+            <li><a href="tabelsiswa.html"><i class="fa fa-users"></i>&nbsp;  Data Siswa/i</a></li>
+        </ul>
+      </nav>
+      
+      <div class="wrapper">
+          <div class="section">
+              <div class="box-area">
+                  <img src="Image/logo-dj.png" style="opacity: 0.25; width:298px; height:auto;">
+              </div>
+              <footer class="bg-light text-right text-lg-start footer">
+                  <!-- Copyright -->
+                  <div class="text-right p-3">
+                    Copyright © 2021 Sekolah Daarul Jannah
+                  </div>
+              </footer>
+          </div>
+      </div>
 
-        <h1 class = "text-center h1">Sistem Cek Pembayaran<br>Sekolah Daarul Jannah</h1>
-
-        <footer class="bg-light text-center text-lg-start footer">
-            <!-- Copyright -->
-            <div class="text-left p-3">
-              Copyright © 2021 Sekolah Daarul Jannah
-            </div>
-        </footer>
     </body>
 </html>
