--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='logo-sekolah.png') }}">
-        <title id="judul">Sistem Keuangan Daarul Jannah</title>
+        <title>Dashboard - Sistem Pembayaran DJ</title>
+        <!--Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='Image/Icon1.png') }}">
+        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
         {% block head%}
         {% endblock %}
     </head>
     <body>
-        {% block body %}
-
-        {% endblock %}
+        <!-- Sidebar -->
+        <nav>
+            <ul>
+                <li class="logo"><img src="{{ url_for('static', filename='Image/logo-sekolah.png') }}" class="schlogo"></li>
+                <li class="tag-logo">Sistem Pembayaran Sekolah Islam Plus Daarul Jannah</li>
+                <li><a href="/manajemen_siswa"><i class="fa fa-users"></i>&nbsp;  Data Siswa/i</a></li>
+            </ul>
+        </nav>
+        <div class="wrapper">
+            <div class="section">
+                {% block body %}
+                {% endblock %}
+                
+                <footer class="bg-light text-right text-lg-start footer">
+                    <!-- Copyright -->
+                    <div class="text-right p-3">
+                    Copyright © 2021 Sekolah Daarul Jannah
+                    </div>
+                </footer>
+            </div>
+        </div>
     </body>
 </html>
